--- a/src/main/resources/templates/front-end/coachsidebar.html
+++ b/src/main/resources/templates/front-end/coachsidebar.html
@@ -12,7 +12,7 @@
 
                                         <div class="rbt-default-sidebar-wrapper">
                                             <div class="section-title mb--20">
-                                                <h6 class="rbt-title-style-2">Welcome, <span th:text="${uName}"></span></h6>
+                                                <h6 class="rbt-title-style-welcome">Welcome, <span th:text="${uName}"></span></h6>
                                             </div>
                                             <nav class="mainmenu-nav">
                                                 <ul class="dashboard-mainmenu rbt-default-sidebar-list">
