--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -14451,6 +14451,15 @@ span.transparent-button:hover i {
 }
 
 .rbt-title-style-2 {
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  opacity: 0.5;
+  margin-bottom: 0;
+}
+
+.rbt-title-style-welcome {
   font-size: 20px;
   font-weight: 600;
   text-transform: uppercase;
