--- a/src/main/resources/templates/front-end/course/create_course.html
+++ b/src/main/resources/templates/front-end/course/create_course.html
@@ -841,7 +841,7 @@
 
                                                 <div class="course-field mb--15">
                                                     <label for="aboutCourse">課程介紹</label>
-                                                    <textarea id="crIntro" rows="10" ></textarea>
+                                                    <textarea id="crIntro" rows="10" placeholder="介紹內容"></textarea>
                                                     <small class="d-block mt_dec--5"><i class="feather-info"></i> 允许使用 HTML 或纯文本，不支持表情符號。</small>
                                                 </div>
 
@@ -915,11 +915,11 @@
                                                                             <!-- <small class="d-block mt_dec--5"><i class="feather-info"></i> The Course Price Includes Your Author Fee.</small> -->
                                                                         </div>
 
-                                                                        <div class="course-field mb--15">
+                                                                        <!-- <div class="course-field mb--15">
                                                                             <label for="discountedPrice-1">優惠價格 ($)</label>
                                                                             <input id="discountedPrice-1" type="number" placeholder="$ 優惠價格">
                                                                             <small class="d-block mt_dec--5"><i class="feather-info"></i>非必填</small>
-                                                                        </div>
+                                                                        </div> -->
 
                                                                     </div>
 
@@ -1129,27 +1129,43 @@
                             <div class="col-lg-8">
                                 <a class="rbt-btn btn-gradient hover-icon-reverse w-100 text-center" href="#" id="createCourseButton">
                                     <span class="icon-reverse-wrapper">
-                                        <span class="btn-text">完成創建課程</span>
+                                        <span class="btn-text">下一步上傳課程影片資料</span>
                                     <span class="btn-icon"><i class="feather-arrow-right"></i></span>
                                     <span class="btn-icon"><i class="feather-arrow-right"></i></span>
                                     </span>
                                 </a>
                             </div>
                             <script>
-                            document.getElementById("createCourseButton").addEventListener("click", function() {
-                            	
-                        		
+                                 const reader = new FileReader();
+                                
+                            	 let imageBase64 = ''
+                            	 let imageFile = ''
+                                document.getElementById("crCover").addEventListener("change", function(e) {
+                            	 console.log(e.target.files[0]);
+                            	 imageFile = e.target.files[0]
+                                 reader.readAsDataURL(e.target.files[0]);
+                               	  reader.onload = function(event) {
+                                    imageBase64 = reader.result
+                               	    // Now you can send the base64String to your backend or use it as needed
+                                    // console.log(imageBase64)
+                               	  };
+                                })
+                                 document.getElementById("createCourseButton").addEventListener("click", function() {
+                                	console.log(imageFile)
+                                	if(!imageFile){
+                                		return alert('需上傳圖片')
+                                	}
                                 var data = {
-                        	        uId : 10001 ,
+                        	        userVO : 10001 ,
                         	        crClass : $('#crClass').val(),
-                        	        crState : 1,
+                        	        crState : 0,
                         	        crTitle : $('#crTitle').val(),
                         	        crSubtitle : $('#crSubtitle').val(),
                         	        crIntro : $('#crIntro').val(),
-                        	        crCoverfile : $('#crCover')[0].files[0],
+                        	        crCoverfile : imageFile,
                         	        crPrice : $('#crPrice').val(),
                         	        crCmQuan : 1,
-                        	        crTotStar : 1,
+                        	        crTotStar : 5,
                         	        crPurpose1 : $('#crPurpose1').val(),
                         	        crPurpose2 : $('#crPurpose2').val(),
                         	        crPurpose3 : $('#crPurpose3').val(),
@@ -1163,23 +1179,39 @@
                                 for (const key in data) {
                                     formData.append(key, data[key]); // 添加其他数据到FormData
                                 }
-                                $.ajax({
-                                    url: 'http://localhost:8080/course/insert',
-                                    type: 'POST',
-                                    data: formData,
-                                    dataType:'json',
-                                    processData: false,
-                                    contentType: false,
-                                    success: function(response) {
-                                        window.alert("成功創建課程接下來去上傳影片吧！");
-                                        var crId = response.crId;
-                                        sessionStorage.setItem('crId', crId);
-                                        window.location.href = 'create_course_video';
-                                    },
-                                    error: function(error) {
-                                        console.error('Error:', error);
-                                    }
-                                });
+                                try {
+                                	$.ajax({
+                                        url: 'http://localhost:8080/course/insert',
+                                        type: 'POST',
+                                        data: formData,
+                                        processData: false,
+                                        contentType: false,
+                                        success: function(response) {
+                                            window.alert("成功創建課程接下來去上傳影片吧！");
+                                            var responseOK = JSON.parse(response);
+                                            var crId = parseInt(responseOK.crId);
+                                            console.log(responseOK.crId);
+                                            console.log(crId);
+                                            sessionStorage.setItem('crId', crId);
+                                            window.location.href = 'create_course_video';
+                                        },
+                                        error: function(error) {
+                                        	try {
+	                                        	const allErrors = JSON.parse(error.responseText)
+	                                        	let errorMsg = ''
+	                                        	for(let error of allErrors.errors) {
+		                                        	console.log(error)
+	                                        		errorMsg += `${error.defaultMessage}\n`
+	                                        	}
+	                                        	window.alert(errorMsg)
+                                        	} catch (err) {
+                                        		window.alert(123)
+                                        	}
+                                        }
+                                    });
+                                }catch(err){
+                                	window.alert(1111)
+                                }
                                 });
                             </script>
                         </div>
